test/spec_vectors/simd_i8x16_arith/fail/module_1.wat
(module (func (result v128) (i8x16.neg (i32.const 0))))